--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,19 @@
-django
-django-crispy-forms
-django-bootstrap4
-django-bootstrap-datepicker-plus
-requests
+annotated-types==0.6.0
+asgiref==3.7.2
+backports.zoneinfo==0.2.1
+beautifulsoup4==4.12.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+Django==4.2.11
+django-bootstrap-datepicker-plus==5.0.5
+django-bootstrap4==24.1
+django-crispy-forms==2.1
+idna==3.6
+pydantic==2.6.4
+pydantic-core==2.16.3
+requests==2.31.0
+soupsieve==2.5
+sqlparse==0.4.4
+typing-extensions==4.10.0
+urllib3==2.2.1
+
